--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
       <p>I know it made you feel bad and i deeply regret my behaviour.
         You are so important to me.</p>
       <p>Please forgive me — I promise to learn and grow and do better and be more thoughtful 🥺</p>
-      <!-- <p>With all my love,<br><strong>Anuj</strong></p> -->
+      <p><br><strong>⬇️SCROLL⬇️</strong></p>
       <div class="heart">💓</div>
     </div>
 
