--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         You are so important to me.</p>
       <p>Please forgive me — I promise to learn and grow and do better and be more thoughtful 🥺</p>
       <p><br><strong>⬇️SCROLL⬇️</strong></p>
-      <div class="heart">💓</div>
+<!--       <div class="heart">💓</div> -->
     </div>
 
     <!-- Stickers -->
