--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>I'm Sorry, Diya 💛</h1>
+    <h1>I'm Sorry, Diya 🤍</h1>
     <div class="apology-box">
       <div class="side-left">💐🌻🌼💐🌻🌼💐🌻🌼</div>
       <div class="side-right">💐🌻🌼💐🌻🌼💐🌻🌼</div>
