--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
       <div class="side-left">💐🌻🌼💐🌻🌼💐🌻🌼</div>
       <div class="side-right">💐🌻🌼💐🌻🌼💐🌻🌼</div>
       <p>Hey Diya,</p>
-      <p>I know it made you feel bad and i deeply regret my behaviour.
+      <p>I know I made you feel bad and i deeply regret my behaviour.
         You are so important to me.</p>
       <p>Please forgive me — I promise to learn and grow and do better and be more thoughtful 🥺</p>
       <p><br><strong>⬇️SCROLL⬇️</strong></p>
